--- a/multiplayer.html
+++ b/multiplayer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe: Single Player</title>
+    <title>Tic Tac Toe: Multiplayer</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <header>
@@ -17,7 +17,7 @@
 </header>
 <body>
     <div class="container">
-        <h1>You against the CPU</h1>
+        <h1>Multiplayer</h1>
         <div class="arena">
         </div>
     <div>
@@ -28,5 +28,6 @@
     </div>
     <script src="game.js"></script>
 </body>
-<footer>Enjoy :D! -an aspiring Web Developer</footer>
+<footer>Technically still the single player game but it's here for placeholding reasons. Hoping to add the real one in soon :D
+    -An aspiring Web Developer</footer>
 </html>
