--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <header>
-    <div id="title"><a href="/index.html">Tic Tac Toe</div>
+    <div id="title"><a href="/index.html">Tic Tac Toe</div> <!--text which Links to the main landing page>
     
 </header>
 <body>
-    <div class="choices">
-    <div class="firstgame">
+    <div class="choices"> <!--a class to encapsulate both images to let me make formatting changes to both-->
+    <div class="firstgame"> <!-- class for the first image to let me set up a text overlay -->
         <img src="/imgs/single.jpg" width="750" height="750" alt="Single-Player">
-      <div class="fadedbox">
-        <div class="title text"> <a href="/single-player.html">Single Player</a></div></div>
+      <div class="fadedbox"> <!-- making a separate box that appears when you hover over the single player image-->
+        <div class="title text"> <a href="/single-player.html">Single Player</a></div></div> <!--text that appears along with the box that links to the single player page-->
     </div>
-    <div class="secondgame">
+    <div class="secondgame"> <!-- essentially the same idea as the firstgame. however, this is for the multiplayer side of the page(i.e., the box and text will appear when you hover over the specified image-->-->
         <img src="/imgs/multi.jpg" width="750" height="750" alt="Multiplayer">
       <div class="fadedbox2">
         <div class="title2 text2"> <a href="/multiplayer.html">Multiplayer</a></div></div>
