--- a/single-player.html
+++ b/single-player.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <header>
-    <nav> 
+    <nav> <!--nav bar with text hyperlinks to each of the main pages-->
     <a href="/single-player.html">Single Player</a> 
     <a href="/index.html">Tic Tac Toe</a>
     <a href="/multiplayer.html">Multiplayer</a> 
@@ -16,7 +16,7 @@
     </div>
 </header>
 <body>
-    <div class="container">
+    <div class="container"> <!--setup for the tic tac toe board-->
         <h1>You against the CPU</h1>
         <div class="arena">
         </div>
