--- a/single-player.html
+++ b/single-player.html
@@ -22,7 +22,7 @@
         </div>
     <div>
         <h2 id="winner"></h2>
-        <button onclick="reset_board()">START</button>
+        <button onclick="reset_board()">START</button> <!--set up so that the reset board function from game.js is loaded when you click on this button-->
         <button onclick="">RESET</button>
         <button onclick="">REPLAY</button>
     </div>
