--- a/multiplayer.html
+++ b/multiplayer.html
@@ -28,6 +28,6 @@
     </div>
     <script src="game.js"></script>
 </body>
-<footer>Technically still the single player game but it's here for placeholding reasons. Hoping to add the real one in soon :D
+<footer>Technically still the single player game but it's here for placeholding reasons. Plan to actually add this for Week 4 :D
     -An aspiring Web Developer</footer>
 </html>
