--- a/multiplayer.html
+++ b/multiplayer.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <header>
-    <nav> <!--nav bar which has text hyperlinks to each of the three pages-->
+    <nav> <!--Nav bar with links to all three pages-->
     <a href="/single-player.html">Single Player</a> 
     <a href="/index.html">Tic Tac Toe</a>
     <a href="/multiplayer.html">Multiplayer</a> 
@@ -16,18 +16,21 @@
     </div>
 </header>
 <body>
-    <div class="container"> <!--setup for the tic tac toe board-->
-        <h1>Multiplayer</h1>
-        <div class="arena">
-        </div>
-    <div>
-        <h2 id="winner"></h2>
-        <button onclick="reset_board()">START</button> <!--set up so that the reset board function from game.js is loaded when you click on this button-->
-        <button onclick="">RESET</button>
-        <button onclick="">REPLAY</button>
+    <div class="board"> <!--the meat of the board itself with nine spots for the future game. I would name them and trim borders of the appropriate sides to really drive the look down but I don't remember if we learned that in class.-->
+        <div class="spot"></div>
+        <div class="spot"></div>
+        <div class="spot"></div>
+        <div class="spot"></div>
+        <div class="spot"></div>
+        <div class="spot"></div>
+        <div class="spot"></div>
+        <div class="spot"></div>
+        <div class="spot"></div>
+      </div> 
+        <a href="/multiplayer.html">START</a></button> <!--linking the start button to refresh the page so would that qualify as working?-->
+        RESET
+        REPLAY
     </div>
-    <script src="game.js"></script>
 </body>
-<footer>Technically still the single player game but it's here for placeholding reasons. Plan to actually add this for Week 4 :D
-    -An aspiring Web Developer</footer>
+<footer>will walk through this for anybody anytime</footer>
 </html>
