--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </header>
 <body>
     <div class="firstgame"> <!--referencing image and text with hyperlink for single player tic tac toe. the idea was that cats are stereotypically solitary creatures...therefore they'd be better suited for a solo experience(i.e., single player)-->
-        <img src="/imgs/single.jpg" width="500" height="500" alt="Single-Player">
+        <img src="/single.jpg" width="500" height="500" alt="Single-Player">
         <div id="Single"><a href="/single-player.html">Single Player</a></div>
     </div></div>
     <div class="secondgame"><!--referencing image and text with hyperlink for multiplayer tic tac toe. the logic here are that dogs are typically more people oriented creatures...therefore better suited for an experience that involves multiple people(i.e., multiplayer)-->
-        <img src="/imgs/multi.jpg" width="500" height="500" alt="Multiplayer">
+        <img src="/multi.jpg" width="500" height="500" alt="Multiplayer">
         <div id="Multi"><a href="/multiplayer.html">Multiplayer</a></div>
       </div>
     </div>
