--- a/single-player.html
+++ b/single-player.html
@@ -15,6 +15,9 @@
         <a href="single-player.html">Single Player</a>
         <a href="index.html">Tic Tac Toe</a>
         <a href="multiplayer.html">Multiplayer</a>
+        <div id=timer>
+         Time Elapsed 0:00:00
+        </div>
       </nav>
     </header>
 
@@ -33,12 +36,23 @@
         <div class="spot" id="s9"></div>
       </div>
     </div>
+    <!-- Status area -->
+    <div id="statuscontainer">
+      <div id="status">Press START to begin</div>
+    </div>
     <!--working or not working buttons in all their glory-->
     <div class="movebuttons">
-      <button>START</button>
-      <button disabled="true">RESTART</button>
-      <button disabled="true">REPLAY</button>
+      <!-- Start button -->
+      <div id="startWrapper">
+        <button id="start">START</button>
+      </div>
+      <button id="reset">RESET</button>
+      <button id="replay" disabled="true">REPLAY</button>
     </div>
-    <footer>copyright: the lollypop guild of Uz! contact us in a land of pure imagination</footer>
+    <footer>
+      copyright: the lollypop guild of Uz! contact us in a land of pure
+      imagination
+    </footer>
+    <script src="/scripts/truegame.js"></script>
   </body>
 </html>
