--- a/multiplayer.html
+++ b/multiplayer.html
@@ -52,6 +52,6 @@
       copyright: the lollypop guild of Uz! contact us in a land of pure
       imagination
     </footer>
-    <script src="/scripts/truegame.js"></script>
+    <script src="scripts/truegame.js"></script>
   </body>
 </html>
