--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/gamestyles.css" />
   </head>
   <body>
     <header>
-      <!--separate class just for this page to help me center the text-->
+      <!--separate class just for this page to help center the text-->
       <div id="title">
-      <nav>
-        <a href="index.html">Tic Tac Toe</a>
-      </nav>
-    </div>
+        <nav>
+          <a href="index.html">Tic Tac Toe</a>
+        </nav>
+      </div>
     </header>
     <!--separate class to handle moving the images-->
     <div class="moveoptions">
       <div class="firstgame">
-        <!--referencing image and text with hyperlink for single player tic tac toe. the idea was that cats are stereotypically solitary creatures...therefore they'd be better suited for a solo experience(i.e., single player)-->
         <a href="single-player.html">
           <img
             src="imgs/single.jpg"
@@ -30,7 +29,6 @@
         <div id="Single">Single Player</div>
       </div>
       <div class="secondgame">
-        <!--referencing image and text with hyperlink for multiplayer tic tac toe. the logic here are that dogs are typically more people oriented creatures...therefore better suited for an experience that involves multiple people(i.e., multiplayer)-->
         <a href="multiplayer.html">
           <img src="imgs/multi.jpg" width="500" height="500" alt="Multiplayer"
         /></a>
